# foo

./: CMakeLists.txt  README.md  foo.cpp  foo.hpp
.github/workflows/: build.yaml  merge.yaml  pull-request.yaml
